// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarNav should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style-type: none;
}

@media (max-width:48rem) {
  .c0 > li:first-child {
    border-top: none;
  }
}

@media (min-width:48rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    height: auto;
    width: 100%;
  }
}

<NavbarNav
  toggled={true}
  width="100%"
>
  <styled.ul
    toggled={true}
    width="100%"
  >
    <ul
      className="c0"
      width="100%"
    />
  </styled.ul>
</NavbarNav>
`;

exports[`NavbarNav should render correctly with toggled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style-type: none;
}

@media (max-width:48rem) {
  .c0 > li:first-child {
    border-top: none;
  }
}

@media (min-width:48rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    height: auto;
    width: 100%;
  }
}

<NavbarNav
  toggled={true}
  width="100%"
>
  <styled.ul
    toggled={true}
    width="100%"
  >
    <ul
      className="c0"
      width="100%"
    />
  </styled.ul>
</NavbarNav>
`;

exports[`NavbarNav should render correctly with toggled 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style-type: none;
}

@media (max-width:48rem) {
  .c0 > li:first-child {
    border-top: none;
  }
}

@media (min-width:48rem) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    height: auto;
    width: auto;
  }
}

<NavbarNav
  toggled={true}
  width="auto"
>
  <styled.ul
    toggled={true}
    width="auto"
  >
    <ul
      className="c0"
      width="auto"
    />
  </styled.ul>
</NavbarNav>
`;
